src/snapshots/alma__parser__tests__test_expression__arbitrary expression in the record slot.snap
---
source: src/parser.rs
assertion_line: 2390
expression: "parse(\"{ if True then {} else {} | x = 1, y = 3 }\")"
---
Input:

{ if True then {} else {} | x = 1, y = 3 }

Result:

Node {
    start: Index(
        0,
    ),
    end: Index(
        17,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: RecordUpdate(
            Node {
                start: Index(
                    1,
                ),
                end: Index(
                    8,
                ),
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: If(
                        Node {
                            start: Index(
                                2,
                            ),
                            end: Index(
                                2,
                            ),
                            value: Expression_ {
                                typ: RefCell {
                                    value: None,
                                },
                                expr: Bool(
                                    true,
                                ),
                            },
                        },
                        Node {
                            start: Index(
                                4,
                            ),
                            end: Index(
                                5,
                            ),
                            value: Expression_ {
                                typ: RefCell {
                                    value: None,
                                },
                                expr: Record(
                                    [],
                                ),
                            },
                        },
                        Node {
                            start: Index(
                                7,
                            ),
                            end: Index(
                                8,
                            ),
                            value: Expression_ {
                                typ: RefCell {
                                    value: None,
                                },
                                expr: Record(
                                    [],
                                ),
                            },
                        },
                    ),
                },
            },
            [
                (
                    Node {
                        start: Index(
                            10,
                        ),
                        end: Index(
                            10,
                        ),
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 1,
                            },
                        },
                    },
                    Node {
                        start: Index(
                            12,
                        ),
                        end: Index(
                            12,
                        ),
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                1.0,
                            ),
                        },
                    },
                ),
                (
                    Node {
                        start: Index(
                            14,
                        ),
                        end: Index(
                            14,
                        ),
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 3,
                            },
                        },
                    },
                    Node {
                        start: Index(
                            16,
                        ),
                        end: Index(
                            16,
                        ),
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                3.0,
                            ),
                        },
                    },
                ),
            ],
        ),
    },
}
