src/snapshots/alma__parser__tests__test_expression__binary_operators-4.snap
---
source: src/parser.rs
assertion_line: 2221
expression: "parse(\"1 == 2 / 3\")"
---
Input:

1 == 2 / 3

Result:

Node {
    start: 0,
    end: 4,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Binary(
            Node {
                start: 1,
                end: 1,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        None,
                        Identifier(
                            Node {
                                start: 1,
                                end: 1,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 5,
                                    },
                                },
                            },
                        ),
                    ),
                },
            },
            Node {
                start: 1,
                end: 1,
                value: Binop_ {
                    typ: Equal,
                    precedence: 11,
                    associativity: Ltr,
                },
            },
            [
                Node {
                    start: 0,
                    end: 0,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Float(
                            1.0,
                        ),
                    },
                },
                Node {
                    start: 2,
                    end: 4,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Binary(
                            Node {
                                start: 3,
                                end: 3,
                                value: Expression_ {
                                    typ: RefCell {
                                        value: None,
                                    },
                                    expr: Identifier(
                                        None,
                                        Identifier(
                                            Node {
                                                start: 3,
                                                end: 3,
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 4,
                                                    },
                                                },
                                            },
                                        ),
                                    ),
                                },
                            },
                            Node {
                                start: 3,
                                end: 3,
                                value: Binop_ {
                                    typ: Division,
                                    precedence: 15,
                                    associativity: Ltr,
                                },
                            },
                            [
                                Node {
                                    start: 2,
                                    end: 2,
                                    value: Expression_ {
                                        typ: RefCell {
                                            value: None,
                                        },
                                        expr: Float(
                                            2.0,
                                        ),
                                    },
                                },
                                Node {
                                    start: 4,
                                    end: 4,
                                    value: Expression_ {
                                        typ: RefCell {
                                            value: None,
                                        },
                                        expr: Float(
                                            3.0,
                                        ),
                                    },
                                },
                            ],
                        ),
                    },
                },
            ],
        ),
    },
}
