src/snapshots/alma__parser__tests__test_expression__function_call-4.snap
---
source: src/parser.rs
assertion_line: 2257
expression: "parse(\"fun\\narg\")"

---
Input:

fun
arg

Result:

:2:0

Expected the end of input, but instead found: `arg`

  1│  fun
  2│  arg
   │  ↑↑↑

Error {
    kind: InvalidEndOfInput,
    token: Token {
        kind: Identifier,
        position: 4,
        end_position: 7,
        lexeme: "arg",
        line: 2,
        column: 0,
        indent: 0,
    },
}
