src/snapshots/alma__parser__tests__test_expression__function_call-5.snap
---
source: src/parser.rs
assertion_line: 2228
expression: "parse(\"\nfun arg1\n  arg2 arg3\n  arg4\")"
---
Input:


fun arg1
  arg2 arg3
  arg4

Result:

Node {
    start: Index(
        0,
    ),
    end: Index(
        4,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: FnCall {
            function: Node {
                start: Index(
                    0,
                ),
                end: Index(
                    0,
                ),
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier {
                        module: None,
                        identifier: Identifier(
                            Node {
                                start: Index(
                                    0,
                                ),
                                end: Index(
                                    0,
                                ),
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                },
                            },
                        ),
                    },
                },
            },
            arguments: [
                Node {
                    start: Index(
                        1,
                    ),
                    end: Index(
                        1,
                    ),
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Identifier {
                            module: None,
                            identifier: Identifier(
                                Node {
                                    start: Index(
                                        1,
                                    ),
                                    end: Index(
                                        1,
                                    ),
                                    value: Identifier_ {
                                        name: SymbolU32 {
                                            value: 2,
                                        },
                                    },
                                },
                            ),
                        },
                    },
                },
                Node {
                    start: Index(
                        2,
                    ),
                    end: Index(
                        2,
                    ),
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Identifier {
                            module: None,
                            identifier: Identifier(
                                Node {
                                    start: Index(
                                        2,
                                    ),
                                    end: Index(
                                        2,
                                    ),
                                    value: Identifier_ {
                                        name: SymbolU32 {
                                            value: 3,
                                        },
                                    },
                                },
                            ),
                        },
                    },
                },
                Node {
                    start: Index(
                        3,
                    ),
                    end: Index(
                        3,
                    ),
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Identifier {
                            module: None,
                            identifier: Identifier(
                                Node {
                                    start: Index(
                                        3,
                                    ),
                                    end: Index(
                                        3,
                                    ),
                                    value: Identifier_ {
                                        name: SymbolU32 {
                                            value: 4,
                                        },
                                    },
                                },
                            ),
                        },
                    },
                },
                Node {
                    start: Index(
                        4,
                    ),
                    end: Index(
                        4,
                    ),
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Identifier {
                            module: None,
                            identifier: Identifier(
                                Node {
                                    start: Index(
                                        4,
                                    ),
                                    end: Index(
                                        4,
                                    ),
                                    value: Identifier_ {
                                        name: SymbolU32 {
                                            value: 5,
                                        },
                                    },
                                },
                            ),
                        },
                    },
                },
            ],
        },
    },
}
