src/snapshots/alma__parser__tests__test_expression__hole_pattern.snap
---
source: src/parser.rs
assertion_line: 2368
expression: "parse(\"let _ = a x in x\")"
---
Input:

let _ = a x in x

Result:

Node {
    start: Index(
        0,
    ),
    end: Index(
        6,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Let {
            definitions: [
                Untyped(
                    Pattern(
                        Node {
                            start: Index(
                                1,
                            ),
                            end: Index(
                                1,
                            ),
                            value: Hole,
                        },
                        Node {
                            start: Index(
                                3,
                            ),
                            end: Index(
                                4,
                            ),
                            value: Expression_ {
                                typ: RefCell {
                                    value: None,
                                },
                                expr: FnCall {
                                    function: Node {
                                        start: Index(
                                            3,
                                        ),
                                        end: Index(
                                            3,
                                        ),
                                        value: Expression_ {
                                            typ: RefCell {
                                                value: None,
                                            },
                                            expr: Identifier {
                                                module: None,
                                                identifier: Identifier(
                                                    Node {
                                                        start: Index(
                                                            3,
                                                        ),
                                                        end: Index(
                                                            3,
                                                        ),
                                                        value: Identifier_ {
                                                            name: SymbolU32 {
                                                                value: 1,
                                                            },
                                                        },
                                                    },
                                                ),
                                            },
                                        },
                                    },
                                    arguments: [
                                        Node {
                                            start: Index(
                                                4,
                                            ),
                                            end: Index(
                                                4,
                                            ),
                                            value: Expression_ {
                                                typ: RefCell {
                                                    value: None,
                                                },
                                                expr: Identifier {
                                                    module: None,
                                                    identifier: Identifier(
                                                        Node {
                                                            start: Index(
                                                                4,
                                                            ),
                                                            end: Index(
                                                                4,
                                                            ),
                                                            value: Identifier_ {
                                                                name: SymbolU32 {
                                                                    value: 2,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                },
                                            },
                                        },
                                    ],
                                },
                            },
                        },
                    ),
                ),
            ],
            body: Node {
                start: Index(
                    6,
                ),
                end: Index(
                    6,
                ),
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier {
                        module: None,
                        identifier: Identifier(
                            Node {
                                start: Index(
                                    6,
                                ),
                                end: Index(
                                    6,
                                ),
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 2,
                                    },
                                },
                            },
                        ),
                    },
                },
            },
        },
    },
}
