src/snapshots/alma__parser__tests__test_expression__if-2.snap
---
source: src/parser.rs
assertion_line: 2233
expression: "parse(\"\nif True then\n  1\n\nelse\n  2\")"
---
Input:


if True then
  1

else
  2

Result:

Node {
    start: 0,
    end: 5,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: If(
            Node {
                start: 1,
                end: 1,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Bool(
                        true,
                    ),
                },
            },
            Node {
                start: 3,
                end: 3,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Float(
                        1.0,
                    ),
                },
            },
            Node {
                start: 5,
                end: 5,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Float(
                        2.0,
                    ),
                },
            },
        ),
    },
}
