src/snapshots/alma__parser__tests__test_expression__if-3.snap
---
source: src/parser.rs
assertion_line: 2241
expression: "parse(\"if True then incr 1 else 2\")"
---
Input:

if True then incr 1 else 2

Result:

Node {
    start: Idx(
        0,
    ),
    end: Idx(
        6,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: If(
            Node {
                start: Idx(
                    1,
                ),
                end: Idx(
                    1,
                ),
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Bool(
                        true,
                    ),
                },
            },
            Node {
                start: Idx(
                    3,
                ),
                end: Idx(
                    4,
                ),
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: FnCall(
                        Node {
                            start: Idx(
                                3,
                            ),
                            end: Idx(
                                3,
                            ),
                            value: Expression_ {
                                typ: RefCell {
                                    value: None,
                                },
                                expr: Identifier(
                                    None,
                                    Identifier(
                                        Node {
                                            start: Idx(
                                                3,
                                            ),
                                            end: Idx(
                                                3,
                                            ),
                                            value: Identifier_ {
                                                name: SymbolU32 {
                                                    value: 1,
                                                },
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                        [
                            Node {
                                start: Idx(
                                    4,
                                ),
                                end: Idx(
                                    4,
                                ),
                                value: Expression_ {
                                    typ: RefCell {
                                        value: None,
                                    },
                                    expr: Float(
                                        1.0,
                                    ),
                                },
                            },
                        ],
                    ),
                },
            },
            Node {
                start: Idx(
                    6,
                ),
                end: Idx(
                    6,
                ),
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Float(
                        2.0,
                    ),
                },
            },
        ),
    },
}
