src/snapshots/alma__parser__tests__test_expression__if-4.snap
---
source: src/parser.rs
assertion_line: 2457
expression: "parse(\"if True then if False then 1 else 3 else 2\")"
---
Input:

if True then if False then 1 else 3 else 2

Result:

Index(
    6,
)

{
    Index(
        0,
    ): Expression {
        span: Index(
            3,
        ),
        expr: Identifier {
            module: None,
            identifier: CapitalizedIdentifier(
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 2,
                    },
                    span: Index(
                        2,
                    ),
                },
            ),
        },
    },
    Index(
        1,
    ): Expression {
        span: Index(
            4,
        ),
        expr: Float(
            1.0,
        ),
    },
    Index(
        2,
    ): Expression {
        span: Index(
            5,
        ),
        expr: Float(
            3.0,
        ),
    },
    Index(
        3,
    ): Expression {
        span: Index(
            1,
        ),
        expr: Identifier {
            module: None,
            identifier: CapitalizedIdentifier(
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 1,
                    },
                    span: Index(
                        0,
                    ),
                },
            ),
        },
    },
    Index(
        4,
    ): Expression {
        span: Index(
            6,
        ),
        expr: If {
            condition: Index(
                0,
            ),
            then: Index(
                1,
            ),
            else_: Index(
                2,
            ),
        },
    },
    Index(
        5,
    ): Expression {
        span: Index(
            7,
        ),
        expr: Float(
            2.0,
        ),
    },
    Index(
        6,
    ): Expression {
        span: Index(
            8,
        ),
        expr: If {
            condition: Index(
                3,
            ),
            then: Index(
                4,
            ),
            else_: Index(
                5,
            ),
        },
    },
}

{
    Index(
        0,
    ): Span {
        start: Index(
            1,
        ),
        end: Index(
            1,
        ),
    },
    Index(
        1,
    ): Span {
        start: Index(
            1,
        ),
        end: Index(
            1,
        ),
    },
    Index(
        2,
    ): Span {
        start: Index(
            4,
        ),
        end: Index(
            4,
        ),
    },
    Index(
        3,
    ): Span {
        start: Index(
            4,
        ),
        end: Index(
            4,
        ),
    },
    Index(
        4,
    ): Span {
        start: Index(
            6,
        ),
        end: Index(
            6,
        ),
    },
    Index(
        5,
    ): Span {
        start: Index(
            8,
        ),
        end: Index(
            8,
        ),
    },
    Index(
        6,
    ): Span {
        start: Index(
            3,
        ),
        end: Index(
            8,
        ),
    },
    Index(
        7,
    ): Span {
        start: Index(
            10,
        ),
        end: Index(
            10,
        ),
    },
    Index(
        8,
    ): Span {
        start: Index(
            0,
        ),
        end: Index(
            10,
        ),
    },
}
