src/snapshots/alma__parser__tests__test_expression__if-5.snap
---
source: src/parser.rs
assertion_line: 2879
expression: "parse(\"if True { 1 } else 2\")"
---
Input:

if True { 1 } else 2

Result:

Test.alma:1:12

Expected a record literal `{ x: 1, y: 2 }` or a record update `{ record | x: 5, y: 4 }`, but instead found: `}`

  1│  if True { 1 } else 2
   │              ↑

Error {
    kind: InvalidRecordFieldsOrExtensibleRecordExpression,
    token: Token {
        kind: RightBrace,
        indent: 0,
        start: 12,
        end: 13,
        line: 1,
        column: 12,
    },
}
