src/snapshots/alma__parser__tests__test_expression__if-6.snap
---
source: src/parser.rs
assertion_line: 2422
expression: "parse(\"if True then 1\")"
---
Input:

if True then 1

Result:

Test.alma:1:14

Expected the `else` branch of the if expression, but instead found: `[End of file]`

  1│  if True then 1
   │                ↑

Error {
    kind: InvalidIfElse,
    token: Token {
        kind: Eof,
        indent: 0,
        start: 14,
        end: 14,
        line: 1,
        column: 14,
    },
}
