src/snapshots/alma__parser__tests__test_expression__lambda_syntax_sugar-2.snap
---
source: src/parser.rs
assertion_line: 2925
expression: "parse(\"\\\nlet add x y = x + y\nadd 5\")"
---
Input:

let add x y = x + y
add 5

Result:

Let 0:25
    definitions:
        Untyped
            Lambda add 4:7
                params:
                    Identifier x 8:9 8:9
                    Identifier y 10:11 10:11
                Binary 14:19 Addition
                    lhs:
                        Identifier x 14:15 14:15
                    rhs:
                        Identifier y 18:19 18:19
    FnCall 20:25
        fn:
            Identifier add 20:23 20:23
        args:
            Float 5 24:25
